# ai-review

./: .gitignore  Dockerfile  README.md  action.yml  config.py  conftest.py  pricing.yaml  pyproject.toml  requirements.txt  sample text  sample tf file  try.py
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  publish.yml  reusable-docker.yml  reusable-lint.yml  reusable-pypi.yml  reusable-review-marketplace.yml  reusable-review-self.yml  reusable-review.yml  reusable-test.yml  review.yml  test.yml  workflow-publish.yml  workflow-review-marketplace.yml  workflow-review-self.yml  workflow-review.yml  workflow-test.yml
ai_review/libs/: json.py
ai_review/prompts/: default_agent.md  default_inline_reply.md  default_summary_reply.md  default_system_agent.md  default_system_inline_reply.md  default_system_summary_reply.md
ai_review/resources/: pricing.yaml
ci/review/: config.yaml
cli/: main.py
cli/commands/: run_inline_review.py  run_review.py  run_summary_review.py
clients/claude/: client.py  schema.py
clients/gemini/: client.py  schema.py
clients/gitlab/: client.py
clients/openai/: client.py  schema.py
demo/: __init__.py
demo/agentic_review/: README.md  __init__.py
docs/: README.md
docs/ci/: Jenkinsfile  README.md  azure-devops.yaml  bitbucket.yaml  github.yaml  gitlab.yaml
docs/cli/: README.md
docs/configs/: .ai-review-azure.yaml  .ai-review.json  .ai-review.yaml  .env.example  README.md
docs/hooks/: README.md
docs/prompts/: README.md  inline_go_light.md  (+6 more)
libs/: logger.py
prompts/: global_inline.md  global_summary.md
(+230 files in other folders)
